<resources>
    <string name="app_name">MOOC</string>

    <string name="check_internet">Проверьте интеренет соединение</string>
    <string name="server_error">Ошибка на стороне сервера</string>

    <string name="auth_i_already_have_an_account"><u>У меня уже есть аккаунт</u></string>
    <string name="auth_i_dont_have_an_account">Ещё нет аккаунта? <u>Зарегистрируйтесь</u></string>
    <string name="auth_mooc_desc">MOOC - это развивающаяся платформа для поиска массовых открытых онлайн-курсов. Присоединяйтесь к нам и найдите что-то особенное именно для вас!</string>

    <string name="base_network_error">Проверьте интернет соединение</string>
    <string name="mooc">MOOC</string>

    <string name="register_title_first">Привет,</string>
    <string name="register_title_second">давайте создадим новую учетную запись!</string>
    <string name="register_content_describe">Чтобы использовать наше приложение, вам нужно создать учетную запись, это займет всего несколько минут.</string>
    <string name="register_email_input">Email</string>
    <string name="register_login_input">Логин</string>
    <string name="register_password_input">Пароль</string>
    <string name="register_second_password_input">Повторите пароль</string>
    <string name="register_button">регистрация</string>

    <string name="login_title_first">Привет,</string>
    <string name="login_title_second">для продолжения необходимо войти в профиль</string>
    <string name="login_description">Мы используем JWT-токены для авторизации, поэтому вам не нужно беспокоиться о сохранности ваших данных.</string>
    <string name="login_email_input">Логин или Email</string>
    <string name="login_password_input">Пароль</string>
    <string name="login_button">Войти</string>

    <string name="search_bar_text">Поисковой запрос</string>
    <string name="search_chip_reset">Сбросить</string>

    <string name="course_page_category">Категории</string>
    <string name="course_page_language">Язык:</string>
    <string name="course_page_cost">Цена:</string>
    <string name="course_page_platform">Платформа</string>
    <string name="course_page_author">Автор</string>
    <string name="course_page_rating">Рейтинг</string>
    <string name="course_page_internal_rating">Внутренний рейтинг</string>
    <string name="course_page_description">Описание:</string>
    <string name="course_page_button">Перейти на страницу курса</string>

    <string name="bottom_menu_search">Поиск</string>
    <string name="bottom_menu_main">Главная</string>
    <string name="bottom_menu_profile">Профиль</string>

    <string name="error_try_again">Попробуйте ещё раз</string>
    <string name="error_retry_signin">Необходимо повторить вход</string>
    <string name="error_server_error">Ошибка на стороне сервера</string>
    <string name="error_retry_text">Повторить</string>

    <string name="profile_featured_courses_text">Рекомендуемые курсы</string>

    <string name="courses_main_second_title">Давайте посмотрим, что мы можем найти для вас сегодня…</string>
    <string name="courses_main_featured">Рекомендуемые курсы</string>
    <string name="courses_main_compilations">Популярные курсы</string>
    <string name="courses_search_text_placeholder">Не удалось найти курсы по данному запросу</string>
</resources>