<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/barLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_light_background"
        android:elevation="3dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/search_bar_text"
            android:imeOptions="actionSearch"
            android:inputType="text"
            app:layout_constraintEnd_toStartOf="@+id/searchButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/searchButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="24dp"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/ic_baseline_search"
            app:layout_constraintBottom_toBottomOf="@+id/searchEditText"
            app:layout_constraintEnd_toStartOf="@+id/expandButton"
            app:layout_constraintTop_toTopOf="@+id/searchEditText"
            app:layout_constraintVertical_bias="0.533" />

        <ImageButton
            android:id="@+id/expandButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="32dp"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/ic_baseline_filter"
            app:layout_constraintBottom_toBottomOf="@+id/searchButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/searchButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/cardview_light_background"
        android:clickable="true"
        android:elevation="3dp"
        android:padding="10dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barLayout"
        app:singleLine="false">

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_chip_reset" />
    </com.google.android.material.chip.ChipGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/filterCover"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        android:clickable="true"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/swipeRefresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barLayout"
        tools:visibility="gone">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchCoursesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ImageView
        android:id="@+id/cantFindImage"
        android:layout_width="0dp"
        android:layout_height="253dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cantFindText"
        app:layout_constraintVertical_bias="0.16000003"
        app:srcCompat="@drawable/search" />

    <TextView
        android:id="@+id/cantFindText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/courses_search_text_placeholder"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/cantFindImage"
        app:layout_constraintStart_toStartOf="@+id/cantFindImage"
        app:layout_constraintTop_toBottomOf="@+id/barLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>